# ENG-DRB

./: LICENSE  README.md
OpenAI&Claude-benchmarking/: README.md  pyproject.toml  requirements.txt
OpenAI&Claude-benchmarking/notebooks/: ENG_DRB_claude_reproduce.ipynb  ENG_DRB_openai_reproduce.ipynb  ENG_DRB_quickstart.ipynb
OpenAI&Claude-benchmarking/prompts/: implicit.txt  non_implicit.txt
OpenAI&Claude-benchmarking/scripts/: openai_batch_roundtrip.py  run_benchmark.py  run_claude_benchmark.py  run_openai_benchmark.py
OpenAI&Claude-benchmarking/src/eng_drb_benchmark/: __init__.py  batch.py  data.py  evaluate.py  postprocess.py
OpenAI&Claude-benchmarking/src/eng_drb_benchmark/providers/: __init__.py  claude.py  openai.py
