[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eng-drb-benchmark"
version = "0.3.0"
description = "Reproducible benchmarking utilities for the ENG-DRB dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.20.0",
    "openai>=1.30.0",
    "anthropic>=0.51.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["src"]
